# Project-Catalyst-Merged

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  schema.graphql
unified-brivas-platform/: .env.example  .golangci.yml  Cargo.toml  README.md  docker-compose.yml  go.mod
unified-brivas-platform/.github/workflows/: ci.yml
unified-brivas-platform/apps/api-gateway/: gateway.go  gateway_test.go
unified-brivas-platform/cmd/server/: main.go
unified-brivas-platform/crates/brivas-sigtran/: Cargo.toml
unified-brivas-platform/crates/brivas-sigtran/src/: config.rs  errors.rs  lib.rs  types.rs
unified-brivas-platform/deploy/global/: geodns-config.yaml  pop-template.yaml  pop-topology.yaml  service-matrix.yaml  service-mesh.yaml
unified-brivas-platform/deploy/helm/brivas-platform/: Chart.yaml  values.yaml
unified-brivas-platform/deploy/helm/cilium-pop/: Chart.yaml  values.yaml
unified-brivas-platform/deploy/scripts/: deploy-pop.sh
unified-brivas-platform/docs/: ADR.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md
unified-brivas-platform/docs/training/: AUDIT_COMPLIANCE.md  BACK_OFFICE.md  BUSINESS_DEVELOPMENT.md  DEVOPS_ENGINEER.md  FINANCE.md  OPERATIONS_ENGINEER.md  PRODUCT_ENGINEER.md  SOFTWARE_DEVELOPER.md  VIDEO_SCRIPTS.md
unified-brivas-platform/infrastructure/docker/: Dockerfile.aiops-engine  Dockerfile.api-gateway  Dockerfile.billing  Dockerfile.dify-orchestrator  Dockerfile.gitops-controller  Dockerfile.hasura-bridge  Dockerfile.lumadb  Dockerfile.mcp-gateway  Dockerfile.payment-service  Dockerfile.rust-base  Dockerfile.smsc  Dockerfile.temporal-worker  Dockerfile.user-service  Dockerfile.ussd-gateway  Dockerfile.voice-switch
unified-brivas-platform/infrastructure/kdb/gateway/: gateway.q
unified-brivas-platform/infrastructure/kdb/schema/: cdr.q
unified-brivas-platform/infrastructure/kdb/scripts/: startup.q
unified-brivas-platform/infrastructure/kdb/tick/: r.q  sym.q  tick.q
unified-brivas-platform/infrastructure/kubernetes/: llama-deployment.yaml
unified-brivas-platform/infrastructure/kubernetes/base/: api-gateway.yaml  billing-service.yaml  configmap.yaml  kustomization.yaml  messaging-hub.yaml  namespace.yaml  payment-service.yaml  smsc.yaml  user-service.yaml  ussd-gateway.yaml
unified-brivas-platform/infrastructure/observability/: otel-collector.yaml  prometheus.yml
unified-brivas-platform/infrastructure/observability/homer/: values.yaml
unified-brivas-platform/infrastructure/questdb/: init.sql
unified-brivas-platform/infrastructure/voice/coturn/: turnserver.conf
unified-brivas-platform/infrastructure/voice/janus/: janus.plugin.videoroom.jcfg
unified-brivas-platform/infrastructure/voice/kamailio/: kamailio.cfg
unified-brivas-platform/infrastructure/voice/kamailio-class4/: toll_free.cfg
unified-brivas-platform/infrastructure/voice/opensips/: opensips.cfg
unified-brivas-platform/infrastructure/voice/rtpengine/: rtpengine.conf
unified-brivas-platform/infrastructure/xdp/: xdp_lb.c
unified-brivas-platform/infrastructure/xdp/controller/: main.go
unified-brivas-platform/microservices/aiops-engine/: Cargo.toml
unified-brivas-platform/microservices/aiops-engine/src/: anomaly.rs  config.rs  main.rs  metrics.rs  playbook.rs  remediation.rs
unified-brivas-platform/microservices/api-gateway/: Cargo.toml
unified-brivas-platform/microservices/api-gateway/schema/: gateway.sql
unified-brivas-platform/microservices/billing/: Cargo.toml
unified-brivas-platform/microservices/dify-orchestrator/: Cargo.toml
unified-brivas-platform/microservices/gitops-controller/: Cargo.toml
unified-brivas-platform/microservices/hasura-bridge/: Cargo.toml
unified-brivas-platform/microservices/instant-messaging/: Cargo.toml
unified-brivas-platform/microservices/landing-service/: package.json
unified-brivas-platform/microservices/mcp-gateway/: Cargo.toml
unified-brivas-platform/microservices/payment-service/: Cargo.toml
unified-brivas-platform/microservices/pop-controller/: Cargo.toml
unified-brivas-platform/microservices/rcs-messaging/: Cargo.toml
unified-brivas-platform/microservices/smsc/: Cargo.toml
unified-brivas-platform/microservices/stir-shaken-service/: Cargo.toml
unified-brivas-platform/microservices/temporal-worker/: Cargo.toml
unified-brivas-platform/microservices/unified-messaging/: Cargo.toml
unified-brivas-platform/microservices/user-service/: Cargo.toml
unified-brivas-platform/microservices/ussd-gateway/: Cargo.toml
unified-brivas-platform/microservices/voice-switch/: Cargo.toml
unified-brivas-platform/microservices/voice-video-calling/: Cargo.toml
unified-brivas-platform/migrations/: migrate_data.sh
unified-brivas-platform/migrations/lumadb/: 001_initial_schema.sql
unified-brivas-platform/services/ai-service/: service.go
unified-brivas-platform/services/sms-service/: service.go  service_test.go
unified-brivas-platform/shared/brivas-core/: Cargo.toml
unified-brivas-platform/shared/brivas-im-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-kdb-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-lb-health/: Cargo.toml
unified-brivas-platform/shared/brivas-lumadb/: Cargo.toml
unified-brivas-platform/shared/brivas-mcp-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-proto/: Cargo.toml
unified-brivas-platform/shared/brivas-rcs-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-stir-shaken-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-telemetry/: Cargo.toml
unified-brivas-platform/shared/brivas-temporal-sdk/: Cargo.toml
unified-brivas-platform/shared/brivas-video-sdk/: Cargo.toml
unified-brivas-platform/voice-infra/coturn/: turnserver.conf
unified-brivas-platform/voice-infra/janus/: janus.jcfg  janus.transport.websockets.jcfg
unified-brivas-platform/voice-infra/kamailio/: kamailio.cfg
unified-brivas-platform/voice-infra/kamailio-class4/: carrier_interconnect.cfg  enum.cfg  kamailio.cfg  lcr.cfg  stir_shaken.cfg
unified-brivas-platform/voice-infra/opensips/: opensips.cfg
(+344 files in other folders)
