[package]
name = "brivas-sigtran"
version = "0.1.0"
edition = "2021"
description = "Production-ready SIGTRAN protocol stack for telecommunications"
license = "Proprietary"
authors = ["Brivas Technologies"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "net", "sync", "time", "macros", "rt-multi-thread"] }

# Byte manipulation (zero-copy)
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ASN.1 BER encoding/decoding
rasn = "0.12"

# Encoding (GSM 7-bit, UCS2)
encoding_rs = "0.8"

# UUID for transaction IDs
uuid = { version = "1.6", features = ["v4", "v7"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "5.5"

# Async traits
async-trait = "0.1"

# Configuration
config = "0.14"

# Metrics
metrics = "0.22"

[dev-dependencies]
tokio-test = "0.4"

