[package]
name = "aiops-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aiops-engine"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true

# Internal crates
brivas-core.workspace = true
brivas-lumadb.workspace = true
brivas-telemetry.workspace = true

# YAML parsing for playbooks
serde_yaml = "0.9"
