[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
brivas-core.workspace = true
brivas-proto = { path = "../../shared/brivas-proto" }

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dashmap.workspace = true
jsonwebtoken = "9.2"
regex = "1.10"
reqwest.workspace = true
urlencoding = "2.1"

