[package]
name = "dify-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dify-orchestrator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true

# Internal crates
brivas-core.workspace = true
brivas-lumadb.workspace = true
brivas-telemetry.workspace = true

# HTTP client for Dify API
reqwest = { version = "0.11", features = ["json", "stream"] }

# SSE parsing for streaming responses
eventsource-stream = "0.2"
tokio-stream = "0.1"
