[package]
name = "gitops-controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gitops-controller"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true

# Internal crates
brivas-core.workspace = true
brivas-lumadb.workspace = true
brivas-telemetry.workspace = true

# GitOps specific
git2 = "0.18"
serde_yaml = "0.9"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
