[package]
name = "instant-messaging"
version.workspace = true
edition.workspace = true

[[bin]]
name = "instant-messaging"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true

# GraphQL
async-graphql.workspace = true
async-graphql-axum.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures-util.workspace = true

# Cryptography for E2EE
x25519-dalek.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true

# Internal crates
brivas-core.workspace = true
brivas-lumadb.workspace = true
brivas-im-sdk.workspace = true
brivas-telemetry.workspace = true
