[package]
name = "payment-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "payment-service"
path = "src/main.rs"

[dependencies]
brivas-core.workspace = true

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true

rust_decimal = "1.33"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
