[package]
name = "pop-controller"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pop-controller"
path = "src/main.rs"

[dependencies]
brivas-core.workspace = true
brivas-lumadb = { path = "../../shared/brivas-lumadb" }

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dashmap.workspace = true
chrono.workspace = true
