[package]
name = "smsc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smsc"
path = "src/main.rs"

[dependencies]
brivas-core.workspace = true
brivas-lumadb = { path = "../../shared/brivas-lumadb" }

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true

# SMPP specific
smpp-pdu = "0.1"
rust_decimal = "1.39"
