[package]
name = "stir-shaken-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# gRPC
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = { workspace = true }
prost-types = "0.12"

# Web framework (for REST management API)
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID and time
uuid = { workspace = true }
chrono = { workspace = true }

# Crypto for PASSporT signing
jsonwebtoken = "9"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
sha2 = { workspace = true }
base64 = { workspace = true }

# X.509 certificate handling
x509-parser = "0.16"
rcgen = "0.12"

# HTTP client for fetching certificates
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Caching
dashmap = { workspace = true }
moka = { version = "0.12", features = ["future"] }

# Telemetry
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Async utilities
async-trait = { workspace = true }
thiserror = { workspace = true }

# Internal crates
brivas-core = { path = "../../shared/brivas-core" }
brivas-lumadb = { path = "../../shared/brivas-lumadb" }
brivas-telemetry = { path = "../../shared/brivas-telemetry" }

[build-dependencies]
tonic-build = { workspace = true }
