[package]
name = "unified-messaging"
version.workspace = true
edition.workspace = true

[[bin]]
name = "unified-messaging"
path = "src/main.rs"

[dependencies]
brivas-core.workspace = true

tokio.workspace = true
axum.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
reqwest.workspace = true
