[package]
name = "voice-switch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }

# Internal crates
brivas-core = { workspace = true }
brivas-lumadb = { workspace = true }
brivas-telemetry = { workspace = true }

# HTTP client for carrier APIs
reqwest = { workspace = true }

# Caching
dashmap = { workspace = true }

# Random for lCR
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
