[package]
name = "brivas-lb-health"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
brivas-core.workspace = true

tokio = { workspace = true, features = ["process"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true

