[package]
name = "brivas-proto"
version.workspace = true
edition.workspace = true

[lib]
name = "brivas_proto"
path = "src/lib.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[build-dependencies]
tonic-build.workspace = true
